syntax = "proto3";

package common.health.check;

// The health check service definition.
service HealthCheckService {
    // Sends a health check request
    rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {}
}

message HealthCheckRequest {
    string message = 1;
}

message HealthCheckResponse {
    string message = 1;
}
